--- a/include/confirmDialog.html
+++ b/include/confirmDialog.html
@@ -4,15 +4,16 @@
 
 
     <div class="modal-content">
-        <h1>Confirm dialog</h1>
       
-      <div class="modal-header">
-        <h2 class="modal-title" id="confirmDialogTemplateTitle">Title</h2>
+      <div class="modal-header">        
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="confirmDialogTemplateClose"><span
             aria-hidden="true">×</span></button>
       </div>
 
       <div class="modal-body" id="confirmDialogTemplateBody">
+        <h2 class="modal-title" id="confirmDialogTemplateTitle">Icon</h2>
+        <h2 class="modal-title" id="confirmDialogTemplateTitle">Title</h2>
+        <h2 class="modal-title" id="confirmDialogTemplateTitle">Subtitle</h2>
       </div>
 
       <div class="modal-footer">
