--- a/include/confirmDialog.html
+++ b/include/confirmDialog.html
@@ -1,25 +1,21 @@
 <div class="modal fade" id="confirmDialogTemplate" tabindex="-1" role="dialog" aria-labelledby="confirmDialogTemplateTitle"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
-
-
     <div class="modal-content">
-      
-      <div class="modal-header">        
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="confirmDialogTemplateClose"><span
-            aria-hidden="true">×</span></button>
-      </div>
 
       <div class="modal-body" id="confirmDialogTemplateBody">
-        <h2 class="modal-title" id="confirmDialogTemplateTitle">Icon</h2>
+
+        <h2 class="modal-icon" id="confirmDialogTemplateIcon">Icon</h2>
         <h2 class="modal-title" id="confirmDialogTemplateTitle">Title</h2>
-        <h2 class="modal-title" id="confirmDialogTemplateTitle">Subtitle</h2>
+        <p class="modal-subtitle" id="confirmDialogTemplateSubtitle">Subtitle</p>
+
       </div>
 
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" id="confirmDialogTemplateCancel">Cancel</button>
         <button type="button" class="btn btn-primary" data-dismiss="modal" id="confirmDialogTemplateSave">Save</button>
       </div>
+      
     </div>
 
 
