--- a/include/confirmDialog.html
+++ b/include/confirmDialog.html
@@ -5,9 +5,9 @@
 
       <div class="modal-body" id="confirmDialogTemplateBody">
 
-        <h2 class="modal-icon" id="confirmDialogTemplateIcon">Icon</h2>
+        <img src="https://img.icons8.com/pastel-glyph/2x/facebook-like.png" class="modal-icon" id="confirmDialogTemplateIcon">
         <h2 class="modal-title" id="confirmDialogTemplateTitle">Title</h2>
-        <p class="modal-subtitle" id="confirmDialogTemplateSubtitle">Subtitle</p>
+        <h3 class="modal-subtitle" id="confirmDialogTemplateSubtitle">Subtitle</h3>
 
       </div>
 
@@ -15,7 +15,7 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal" id="confirmDialogTemplateCancel">Cancel</button>
         <button type="button" class="btn btn-primary" data-dismiss="modal" id="confirmDialogTemplateSave">Save</button>
       </div>
-      
+
     </div>
 
 
