--- a/include/confirmDialog.html
+++ b/include/confirmDialog.html
@@ -2,13 +2,10 @@
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-
       <div class="modal-body" id="confirmDialogTemplateBody">
-
-        <img src="https://img.icons8.com/pastel-glyph/2x/facebook-like.png" class="modal-icon" id="confirmDialogTemplateIcon">
+        <div class="modal-icon" id="confirmDialogTemplateIcon"></div>
         <h2 class="modal-title" id="confirmDialogTemplateTitle">Title</h2>
         <h3 class="modal-subtitle" id="confirmDialogTemplateSubtitle">Subtitle</h3>
-
       </div>
 
       <div class="modal-footer">
@@ -17,7 +14,5 @@
       </div>
 
     </div>
-
-
   </div>
 </div>
